# lms-backend

./: .dockerignore  .env.production  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: deploy.yml
apps/attendance/: admin.py  api.py  models.py  serializers.py  tests.py  urls.py
apps/attendance/migrations/: 0001_initial.py
apps/courses/: access.py  admin.py  api.py  apps.py  models.py  serializers.py  tests.py  urls.py
apps/courses/migrations/: 0001_initial.py  0002_alter_course_title.py  0003_course_logo.py  0004_course_slug.py  0005_course_price.py
apps/groups/: admin.py  api.py  models.py  serializers.py  urls.py
apps/groups/migrations/: 0001_initial.py
apps/homework/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py
apps/homework/migrations/: 0001_initial.py
apps/lessons/: admin.py  api.py  apps.py  models.py  serializers.py  tests.py  urls.py
apps/lessons/migrations/: 0001_initial.py  0002_course_fk.py  0003_lesson_homework.py
apps/messaging/: admin.py  api.py  apps.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  signals.py  tests.py  urls.py
apps/messaging/migrations/: 0001_initial.py  0002_directmessage_is_read_directmessage_read_at_and_more.py
apps/payments/: admin.py  api.py  models.py  serializers.py  urls.py
apps/users/: admin.py  api.py  apps.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  (+3 more)
config/: asgi.py  routing.py  settings.py  urls.py
utils/: homework_ai.py
(+4 files in other folders)
