[project]
name = "lms-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "django==6.0.1",
    "djangorestframework>=3.15",
    "drf-yasg>=1.21",
    "djangorestframework-simplejwt>=5.4",
    "django-filter>=24.0",
    "stripe>=14.4.1",
]
